# dp-crypto

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml  test-gpu.yml
benches/: dense.rs  eq.rs
dp-crypto/: Cargo.toml  build.rs
dp-crypto/benches/: cpu_vs_gpu.rs  dense.rs  devirgo_sumcheck.rs  eq.rs  msm.rs  msm_bitlength.rs  pcs.rs  sumcheck.rs
dp-crypto/examples/: hyperkzg_gpu.rs
dp-crypto/src/: lib.rs
dp-crypto/src/arkyper/: ark_pcs.rs  blitzar_msm.rs  gpu_msm.rs  hyperkzg_gpu.rs  interface.rs  mock.rs  mod.rs  msm.rs
dp-crypto/src/arkyper/transcript/: blake3.rs  mod.rs
dp-crypto/src/poly/: dense.rs  eq.rs  field.rs  mod.rs  slice.rs
dp-crypto/src/sumcheck/: expression.rs  extrapolate.rs  macros.rs  mod.rs  prover.rs  structs.rs  test.rs  util.rs  verifier.rs  virtual_poly.rs  virtual_polys.rs
dp-crypto/src/sumcheck/expression/: monomial.rs  utils.rs
src/: lib.rs
src/arkyper/: interface.rs  mod.rs  msm.rs
src/arkyper/transcript/: mod.rs
src/poly/: challenge.rs  dense.rs  eq.rs  field.rs  mod.rs  slice.rs
src/sumcheck/: expression.rs  macros.rs  mod.rs  test.rs  util.rs  virtual_poly.rs  virtual_polys.rs
src/sumcheck/expression/: monomial.rs  utils.rs
sumcheck_macro/: Cargo.toml
sumcheck_macro/examples/: expand.rs
sumcheck_macro/src/: lib.rs
