[package]
name = "dp-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = { version = "0.5.0", features = ["std"]}
ark-std = { version = "0.5.0", features = ["std","getrandom"]}
ark-ec = { version = "0.5.0", features = ["std"]}
ark-ff = { version = "0.5.0", features = ["std"] }
ark-poly = { version = "0.5.0", features = ["std"]}
anyhow = "^1.0"
blake3 = "^1.8"
tracing = "^0.1"
rayon = "^1.11"
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-poly-commit = "0.5.0"
rand_chacha = "0.3.1"
itertools = "0.14.0"
serde = {version = "^1.0", features = ["derive", "rc"]}
num-bigint = "0.4.6"
either = { version = "1.15.0", features = ["serde"] }
divan = "0.1.21"

[features]
default = ["mono"]
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
]
mono = []

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"]}
env_logger = "0.11.8"
serde_json = "^1.0"

[[bench]]
name = "dense"
harness = false