[workspace]
members = [
  "dp-crypto",
  "sumcheck_macro",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
itertools = "0.14.0"
ark-std = { version = "0.5.0", features = ["std","getrandom"]}
dp-crypto = { path = "dp-crypto" }
ark-ff = { version = "0.5.0", features = ["std"] }
ark-bn254 = { version = "0.5.0", features = ["std"]}
sumcheck_macro = { path = "sumcheck_macro" }