[package]
description = "Macros for the Ceno project"
edition.workspace = true
name = "sumcheck_macro"
readme.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true
proc-macro2 = "1.0.92"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
dp-crypto.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-std.workspace = true